adicionando estilização básica para os relatórios e resolvendo erro no map

--- a/projeto-loja/src/styles/Reports.css
+++ b/projeto-loja/src/styles/Reports.css
@@ -31,3 +31,14 @@
 .report-details p {
   margin: 5px 0;
 }
+
+.report-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 1px solid black;
+  border-radius: 23px;
+  background-color: white;
+  color: black;
+}
